# JSylvan-NDD

./: .gitignore  NDD_VARIANT_RESULTS.md  README.md  build-variants.sh
NDD_sylvan-1.4.1-lace-bundled/src/main/c/sylvan-java/: CMakeLists.txt  build-sylvan.sh
NDD_sylvan-1.4.1-lace-bundled/src/main/java/application/nqueen/: NDDSolution.java
NDD_sylvan-1.4.1-lace-bundled/src/main/java/org/ants/jpndd/cache/: OperationCache.java
NDD_sylvan-1.4.1-lace-bundled/src/main/java/org/ants/jpndd/nodetable/: NodeTable.java
NDD_sylvan-1.8.1-lace-1.4.2/src/main/c/sylvan-java/: CMakeLists.txt  build-sylvan.sh
NDD_sylvan-1.8.1-lace-1.4.2/src/main/c/sylvan-java/src/: jsylvan.c  mc_help.c
NDD_sylvan-1.8.1-lace-1.4.2/src/main/java/jsylvan/: JSylvan.java
NDD_sylvan-1.9.1-lace-1.5.0/src/main/c/sylvan-java/: CMakeLists.txt
NDD_sylvan-1.9.1-lace-1.5.0/src/main/java/application/nqueen/: NQueensTest.java
NDD_sylvan-1.9.1-lace-1.5.0/src/main/java/org/ants/jpndd/utils/: DecomposeBDD.java
NDD_sylvan-1.9.1-lace-1.5.1/: pom.xml
NDD_sylvan-1.9.1-lace-1.5.1/src/main/c/sylvan-java/: build-sylvan.sh
NDD_sylvan-1.9.1-lace-1.5.1/src/main/java/org/ants/jpndd/diagram/: NDD.java
NDD_sylvan-1.9.1-lace-2.0.3/src/main/java/application/nqueen/: BDDSolution.java
NDD_sylvan-1.9.1-lace-bundled/src/main/c/sylvan-java/: build-sylvan.sh
NDD_sylvan-1.9.1-lace-bundled/src/main/c/sylvan-java/src/: jsylvan.c
